@startuml allocation_validator
title Template Method -- Resource-allocation validation pipeline

skinparam classAttributeIconSize 0
skinparam backgroundColor white

abstract class AbstractAllocationValidator {
  # resourceRepository : ResourceRepository
  + validate(request : AllocationRequest) : Resource
  # checkBasicInputs(request)
  # resolveResource(request) : Resource
  # checkAvailability(resource, request)
  # {abstract} checkCategoryRules(resource, request)
  # checkProjectBudget(resource, request)
  + {abstract} handlesCategory() : String
}
note right of AbstractAllocationValidator::validate
  Final template method.
  checkProjectBudget is an optional hook
  with a default no-op implementation.
end note

class MaterialAllocationValidator {
  # checkCategoryRules(resource, request)
  + handlesCategory() : String
}

class EquipmentAllocationValidator {
  # checkCategoryRules(resource, request)
  + handlesCategory() : String
}

class LaborAllocationValidator {
  # checkCategoryRules(resource, request)
  + handlesCategory() : String
}

class AllocationValidatorRegistry {
  - byCategory : Map<String, AbstractAllocationValidator>
  + forCategory(category : String) : AbstractAllocationValidator
}

class ResourceColleague <<client>> {
  + reserve(command : AllocationCommand) : Resource
}

class AllocationRequest <<record>> {
  taskId : UUID
  resourceId : UUID
  quantity : double
}

AbstractAllocationValidator <|-- MaterialAllocationValidator
AbstractAllocationValidator <|-- EquipmentAllocationValidator
AbstractAllocationValidator <|-- LaborAllocationValidator

AllocationValidatorRegistry o--> AbstractAllocationValidator
ResourceColleague --> AllocationValidatorRegistry
AbstractAllocationValidator ..> AllocationRequest

@enduml
